--- a/styles.css
+++ b/styles.css
@@ -161,7 +161,11 @@ a {
 
 
 
-.button {
+button {
+  font-family: Arial, sans-serif;
+  font-weight: 400;
+  font-size: 1.5rem;
+  font-style: normal;
   display: inline-block;
   padding: 0.6rem 1.2rem;
   border-radius: 10px;
@@ -169,9 +173,9 @@ a {
   color:white;
   cursor: pointer;
   border: none;
-  border-radius: 5px;
+
 }
-.button:hover, button:hover { 
+.cta-button:hover, button:hover { 
   opacity: 0.7; }
 
 .cta-button  {
@@ -182,7 +186,7 @@ a {
   color:white;
   cursor: pointer;
   border: none;
-  border-radius: 5px;
+  
 }
   
 .footer {
@@ -229,4 +233,60 @@ a {
 	}
 main .loader {
 	font-size: 2em;
+}
+
+.product-details {
+  background: white;
+  border-radius: 10px;
+  margin: 2rem auto;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content:space-between;
+  gap: 1.5rem;
+}
+
+.product-image {
+  display: block;
+  max-width: 100%;
+  max-height: 500px;    
+  margin: 0 auto;       
+  object-fit: contain;  
+  background: white;  
+  border-radius: 8px;
+}
+
+.product-title {
+  font-size: 2rem;
+  font-weight: 700;
+ 
+}
+
+.product-price {
+  font-size: 1.5rem;
+  color: #c23833;
+  font-weight: bold;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.product-price .old-price {
+  text-decoration: line-through;
+  color: #1F3D47A8;
+  margin-right: 8px;
+}
+
+.product-description {
+ 
+  line-height: 1.6;
+}
+
+.product-form {
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.active{
+   text-decoration: underline;
 }
