fix-header-and-color
- added sticky position for header - css
- added hamburger menu, mobile menu - html, css, js
- changed color for text, footer, header - css
- added coming-soon page for menu items

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ body {
   font-weight: 400;
   font-size: 1.5rem;
   font-style: normal;
-  color: #1F3D47;
+  color: #15343e;
   line-height: 1.6;
   text-align: left;
 }
@@ -26,7 +26,7 @@ h1{
 h2{
   font-weight: 700;
   font-size: 2.25rem;
-  color: #245654;
+  color: #15343e;
   margin: 0;
 }
 
@@ -43,10 +43,10 @@ button {
   display: inline-block;
   padding: 0.6rem 1.2rem;
   border-radius: 10px;
-  background: #245654;
-  color:white;
+  background: #F6EFD7;
+  color:#15343e;
   cursor: pointer;
-  border: none;
+  border: 2px solid #15343e;
 
 }
 .cta-button:hover, button:hover { 
@@ -71,12 +71,15 @@ button {
 }
 
 .header {
-  background:  #245654;
+  background: #15343e;
   padding: 1rem 3rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
   color: white;
+  position: sticky;
+  top: 0;
+  z-index: 999;
 }
 .header a{
   margin-right: 1rem;
@@ -99,7 +102,7 @@ button {
 
 .footer {
   text-align: center;
-  background: #245654;
+  background: #15343e;
   color: white;
   padding: 1rem 0;
   display: flex;
@@ -135,7 +138,7 @@ button {
   flex-direction: row;
 }
 
-.active{
+.nav-page-active{
    text-decoration: underline;
 }
 
@@ -187,6 +190,84 @@ main .loader {
   left: 50%;
 }
 
+.ham-icon{
+    color: white;
+    font-size: 1.5rem;
+    background-color: #15343e ;
+    border: none;
+}
+.mobile-menu {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 75%;
+    max-width: 320px;
+    height: 100vh;
+    background-color: #15343e ;
+    z-index: 1000;
+    transition: left 0.3s ease;
+    padding-top: 3rem;
+}
+
+.mobile-menu-content a {
+    display: block;
+    padding: 1rem 2rem;
+    color: white;
+    font-size: 1.5rem;
+}
+.menu-close {
+    position: absolute;
+    top: 1.2rem;
+    right: 1.5rem;
+    background: none;
+    border: none;
+    font-size: 1.5rem;
+    color: white;
+    cursor: pointer;
+}
+
+.mobile-menu.active {
+    left: 0;
+}
+
+.menu-overlay.active {
+    opacity: 1;
+    pointer-events: all;
+}
+@media (min-width: 1150px) {
+
+    /* скрываем бургер и overlay */
+    .ham-icon,
+    .menu-overlay,
+    .menu-close  {
+        display: none;
+    }
+
+    /* превращаем mobile-menu в обычный контейнер */
+    .mobile-menu {
+        position: static;
+        height: auto;
+        width: auto;
+        max-width: none;
+        padding: 0;
+        left: 0;
+        background: transparent;
+        transition: none;
+    }
+
+    /* меню в одну строку */
+    .mobile-menu-content {
+        display: flex;
+        align-items: center;
+        gap: 1.5rem;
+    }
+
+    .mobile-menu-content a {
+        padding: 0;
+        font-size: 1.5rem;
+        color: white;
+    }
+}
 .filters{
   margin: 3rem 0 2rem 0;
 }
@@ -203,6 +284,7 @@ main .loader {
   font-size: 1.5rem;   
   padding: 0.4rem 0.8rem;
   border-radius: 10px;
+  border: 2px solid #15343e;;
   background-color: #fff;
   color: #1F3D47;
   cursor: pointer;
@@ -244,7 +326,7 @@ main .loader {
   background: white;
   border-radius: 10px;
   overflow: hidden;
-  box-shadow: 0 4px 10px 0 rgba(31, 61, 71, 0.4);
+  box-shadow: 0 4px 10px 0 #5f787f;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -291,7 +373,7 @@ main .loader {
 }
 .card-price .old-price {
   text-decoration: line-through;
-  color: #1F3D47A8;
+  color: #15343e;
   margin-right: 8px;
 }
 
@@ -335,7 +417,7 @@ main .loader {
 
 .product-price .old-price {
   text-decoration: line-through;
-  color: #1F3D47A8;
+  color: #15343e;
   margin-right: 8px;
 }
 
@@ -360,7 +442,7 @@ main .loader {
   padding: 0.4rem 0.8rem; 
   border-radius: px;
   background-color: #fff;
-  color: #1F3D47;
+  color: #15343e;
   cursor: pointer;
 }
 
@@ -435,7 +517,7 @@ main .loader {
   margin: 0.5rem 0;
   font-size: 1.5rem;
   font-weight: 600;
-  color:  #1F3D47;;
+  color:  #15343e;
   margin-bottom: 10px;
 }
 
@@ -448,7 +530,7 @@ main .loader {
   font-weight: 400;
   font-size: 1.5rem;
   font-style: normal;
-  color: #1F3D47;
+  color: #15343e;
   line-height: 1.6;
   text-align: left;
   flex: 1;              
